--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - .:/myapp
       - ./bundle-cache:/usr/local/bundle
+    tty: true
+    stdin_open: true
     ports:
       - "3000:3000"
     depends_on:
