--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,14 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  username: <%= ENV["POSTGRESQL_USER"] || 'postgres' %>
+  database: <%= ENV["POSTGRESQL_DATABASE"] || 'store_development' %>
+  password: <%= ENV["POSTGRESQL_PASSWORD"] || '123456' %>
+  host: <%= ENV["POSTGRESQL_HOST"] || 'localhost' %>
+  port: <%= ENV["POSTGRESQL_PORT"] || 5432 %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
